# Comfyui-FeedbackSampler

./: FeedbackSampler.py  README.md  __init__.py  pyproject.toml
example_workflows/: Feedback_Sampler_Flux.json  Feedback_Sampler_SD1.5.json  Feedback_Sampler_SD1.5_custom_startframe.json  Feedback_Sampler_SDXLturbo.json  Feedback_Sampler_SDXLturbo_Controlnet.json
